control props implementado

--- a/src/02-component-pattern/styles/custom-styles.css
+++ b/src/02-component-pattern/styles/custom-styles.css
@@ -20,3 +20,11 @@
    color: seashell;
    border-color: seashell;
 }
+
+.shoppping-cart {
+    
+    top: 0px;
+    right: 10px;
+    position: fixed!important;
+
+}
